--- a/config/config.json
+++ b/config/config.json
@@ -1,23 +1,19 @@
 {
   "development": {
-    "username": "djamware",
-    "password": "dj@mw@r3",
-    "database": "node_sequelize",
-    "host": "127.0.0.1",
-    "dialect": "postgres"
+      "username": "postgres",
+      "password": "postgres",
+      "database": "dbT2TI",
+      "host": "127.0.0.1",
+      "dialect": "postgres"
   },
   "test": {
-    "username": "root",
-    "password": "dj@mw@r3",
-    "database": "node_sequelize",
-    "host": "127.0.0.1",
-    "dialect": "postgres"
+      "username": "root",
+      "password": "dj@mw@r3",
+      "database": "node_sequelize",
+      "host": "127.0.0.1",
+      "dialect": "postgres"
   },
   "production": {
-    "username": "root",
-    "password": "dj@mw@r3",
-    "database": "node_sequelize",
-    "host": "127.0.0.1",
-    "dialect": "postgres"
+      "use_env_variable": "DATABASE_URL"
   }
 }
